Kommentare ipynb, Korrekturen Typos

--- a/WebScraping/Get_Data_Bundesliga1.ipynb
+++ b/WebScraping/Get_Data_Bundesliga1.ipynb
@@ -5,7 +5,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Alle Imports die benötigt werden um die gesuchten Daten mittels Webscraping zu sammeln"
+    "#### Imports\n",
+    "<span style=\"font-family: Arial; font-size: 11pt;\">\n",
+    "Der folgende Code enthält die Imports, die für dieses Data Science-Projekt verwendet werden:\n",
+    "\n",
+    "- `requests`: Diese Bibliothek ermöglicht das Senden von HTTP-Anfragen an Webseiten und die Verarbeitung der erhaltenen Daten.\n",
+    "\n",
+    "- `BeautifulSoup` aus `bs4`: Diese Bibliothek wird verwendet, um HTML- oder XML-Dokumente zu parsen. Sie ermöglicht das Durchsuchen von Webseiten und das Extrahieren spezifischer Daten.\n",
+    "\n",
+    "- `psycopg2`: Diese Bibliothek dient als Schnittstelle zur PostgreSQL-Datenbank. Sie ermöglicht das Herstellen von Verbindungen zur Datenbank und das Ausführen von Abfragen sowie andere Datenbankoperationen.</span>"
    ]
   },
   {
@@ -25,8 +33,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Kontrollvariable\n",
-    "Mittels der folgender Variable soll jewils überprüft werden, ob die Verbindung zur DB steht"
+    "#### Kontrollvariable\n",
+    "<span style=\"font-family: Arial; font-size: 11pt;\">\n",
+    "In diesem Codeabschnitt haben wir die Kontrollvariable `conn_Ok` mit dem anfänglichen Wert `True` implementiert, mit der anschliessend überprüft werden soll, ob die Verbindung zur DB steht</span>"
    ]
   },
   {
@@ -44,9 +53,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nutz eine Try-Except Methode, um die Verbindung zur Datenbank zu überprüfen\n",
-    "Kann die Verbindung im Try block hergestellt werden bleibt die Variable conn_Ok als True definiert\n",
-    "Ist dies nicht der Fall fällt es in den Except block und setzty die Variable auf False"
+    "#### DB-Verbindung\n",
+    "<span style=\"font-family: Arial; font-size: 11pt;\">\n",
+    "Es wird mit einer Try-Except Methode versucht, eine Verbindung zur PostgreSQL-Datenbank herzustellen.\n",
+    "- Falls die Verbindung erfolgreich hergestellt werden kann, wird ein Cursor-Objekt erstellt und die Variable `conn_Ok` bleibt auf `True`.\n",
+    "\n",
+    "Falls ein Verbindungsfehler auftritt, wird eine Fehlermeldung ausgegeben und die Variable `conn_Ok` auf `False` gesetzt.\n",
+    "</span>"
    ]
   },
   {
@@ -77,11 +90,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Eine Funktion die aufgerufen wird und den Teamnamen als Input erwartet.\n",
-    "Da die Daten von verschiedenen Quellen kommen,  müssen die Teamnamen erst bereinigt und vereinheitlicht werden (wo nötig)\n",
+    "#### Datenbereinigung\n",
+    "<span style=\"font-family: Arial; font-size: 11pt;\">\n",
+    "Der folgende Code definiert die Funktion get_team_id, die die Team-ID anhand des Teamnamens aus der PostgreSQL-Datenbank abruft.\n",
     "\n",
-    "Danach wird eine SQL Abfrage durchgeführt, die mit hilfe des Teamnamens die Team ID herausfindet.\n",
-    "Die Team ID wird dann zurückgegeben."
+    "- Der übergebene `team_name` wird auf spezifische Teamnamen überprüft und entsprechend angepasst, um den erwarteten Namen in der Datenbank zu verwenden.\n",
+    "- Es wird eine SQL-Abfrage ausgeführt, um die Team-ID aus der Datenbank abzurufen.\n",
+    "- Das Ergebnis der Abfrage wird überprüft und entweder die Team-ID zurückgegeben oder eine Fehlermeldung ausgegeben.\n",
+    "</span>"
    ]
   },
   {
@@ -115,18 +131,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Check ob conn_Ok = True\n",
-    "For-Schleife um die Daten jedes einzelnen Spieltages abzufragen (Total 35 Spieltage)\n",
-    "Mit hilfe der request-Methode die gesuchte Seite abfragen\n",
-    "Wenn der Status code erfolg meldet (200) wir mittels BeautifulSoup die Seite durchsucht (in diesem Fall nach Pass-Daten). Die Suche erfolgt mittels class-Bezeichnung. Wird die Bezeichnung gefunden, wird das entsprechende <td> Tag ausgelesen und in einer Liste Abgespeichert.\n",
+    "#### Passdaten\n",
+    "<span style=\"font-family: Arial; font-size: 11pt;\">\n",
     "\n",
-    "Mit einer weiteren For-Schleife werden die einzelen Einträge der erzeugten Listen abgerufen, auf das Wesentliche gekürzt.\n",
+    "Der folgende Codeabschnitt durchläuft eine Schleife von 1 bis 35 (Spieltage) und ruft Daten von einer Webseite ab.\n",
     "\n",
-    "Vorbereitung der SQL Query in der Variable insert_data_query\n",
-    "\n",
-    "Abrufen der Funktion get_team_id um die ensprechende Team ID aus der DB zu lesen\n",
-    "\n",
-    "mittels cursor.execut() das ausführen der SQL Abfrage und mittels Connection.commit() das abspeichern in der DB"
+    "- Eine URL wird für jeden Spieltag generiert, um Daten von einer bestimmten Webseite abzurufen.\n",
+    "- Eine HTTP-Anfrage wird an die URL gesendet, um die Webseite abzurufen.\n",
+    "- Wenn die Antwort erfolgreich ist (200), werden relevante Informationen wie Mannschaftsnamen und Passquoten von der HTML-Seite extrahiert.\n",
+    "- Die Team-ID wird mit Hilfe der `get_team_id()`-Funktion abgerufen.\n",
+    "- Ein SQL-INSERT-Statement wird erstellt, um die Daten (Spieltag, Team-ID und Passdaten) in der Datenbank zu speichern.\n",
+    "- Die Änderungen werden anschliessend in der Datenbank gespeichert.\n",
+    "</span>"
    ]
   },
   {
@@ -172,7 +188,7 @@
     "\n",
     "                connection.commit()\n",
     "        else:\n",
-    "            print(f'Fehler beim Abrufen der Webseite für Spieltag {matchday}')"
+    "            print(f'Fehler beim Abrufen der Webseite für Spieltag {matchday} und Passdaten')"
    ]
   },
   {
@@ -180,18 +196,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Check ob conn_Ok = True\n",
-    "For-Schleife um die Daten jedes einzelnen Spieltages abzufragen (Total 35 Spieltage)\n",
-    "Mit hilfe der request-Methode die gesuchte Seite abfragen\n",
-    "Wenn der Status code erfolg meldet (200) wir mittels BeautifulSoup die Seite durchsucht (in diesem Fall nach Schüsse aufs Tor). Die Suche erfolgt mittels class-Bezeichnung. Wird die Bezeichnung gefunden, wird das entsprechende <td>-Tag ausgelesen und in einer Liste Abgespeichert.\n",
+    "#### Torschüsse\n",
+    "<span style=\"font-family: Arial; font-size: 11pt;\">\n",
     "\n",
-    "Mit einer weiteren For-Schleife werden die einzelen Einträge der erzeugten Listen abgerufen, auf das Wesentliche gekürzt.\n",
+    "Der folgende Codeabschnitt durchläuft eine Schleife von 1 bis 35 (Spieltage) und ruft Daten von einer Webseite ab.\n",
     "\n",
-    "Vorbereitung der SQL Query in der Variable insert_data_query\n",
-    "\n",
-    "Abrufen der Funktion get_team_id um die ensprechende Team ID aus der DB zu lesen\n",
-    "\n",
-    "mittels cursor.execut() das ausführen der SQL Abfrage und mittels Connection.commit() das abspeichern in der DB"
+    "- Eine URL wird für jeden Spieltag generiert, um Daten von einer bestimmten Webseite abzurufen.\n",
+    "- Eine HTTP-Anfrage wird an die URL gesendet, um die Webseite abzurufen.\n",
+    "- Wenn die Antwort erfolgreich ist (200), werden relevante Informationen wie Mannschaftsnamen und Schüsse aufs Tor von der HTML-Seite extrahiert.\n",
+    "- Ein SQL-INSERT-Statement wird erstellt, um die Daten (Spieltag, Team-ID und Torschüsse) in der Datenbank zu speichern.\n",
+    "- Die Änderungen werden in der Datenbank gespeichert.\n",
+    "- Bei auftretenden Fehlern wird die Transaktion rückgängig gemacht und eine entsprechende Fehlermeldung ausgegeben.\n",
+    "</span>"
    ]
   },
   {
@@ -233,18 +249,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Check ob conn_Ok = True\n",
-    "For-Schleife um die Daten jedes einzelnen Spieltages abzufragen (Total 35 Spieltage)\n",
-    "Mit hilfe der request-Methode die gesuchte Seite abfragen\n",
-    "Wenn der Status code erfolg meldet (200) wir mittels BeautifulSoup die Seite durchsucht (in diesem Fall nach Ballberührungen). Die Suche erfolgt mittels class-Bezeichnung. Wird die Bezeichnung gefunden, wird das entsprechende <td> Tag ausgelesen und in einer Liste Abgespeichert.\n",
+    "#### Ballkontakte\n",
+    "<span style=\"font-family: Arial; font-size: 11pt;\">\n",
     "\n",
-    "Mit einer weiteren For-Schleife werden die einzelen Einträge der erzeugten Listen abgerufen, auf das Wesentliche gekürzt.\n",
+    "Der folgende Codeabschnitt durchläuft eine Schleife von 1 bis 35 (Spieltage) und ruft Daten von einer Webseite ab.\n",
     "\n",
-    "Vorbereitung der SQL Query in der Variable insert_data_query\n",
-    "\n",
-    "Abrufen der Funktion get_team_id um die ensprechende Team ID aus der DB zu lesen\n",
-    "\n",
-    "mittels cursor.execut() das ausführen der SQL Abfrage und mittels Connection.commit() das abspeichern in der DB"
+    "- Eine URL wird für jeden Spieltag generiert, um Daten von einer bestimmten Webseite abzurufen.\n",
+    "- Eine HTTP-Anfrage wird an die URL gesendet, um die Webseite abzurufen.\n",
+    "- Wenn die Antwort erfolgreich ist (200), werden relevante Informationen wie Mannschaftsnamen und Ballberührungen von der HTML-Seite extrahiert.\n",
+    "- Ein SQL-INSERT-Statement wird erstellt, um die Daten (Spieltag, Team-ID und Ballkontakte) in der Datenbank zu speichern.\n",
+    "- Die Änderungen werden in der Datenbank gespeichert.\n",
+    "- Bei auftretenden Fehlern wird die Transaktion rückgängig gemacht und eine entsprechende Fehlermeldung ausgegeben.\n",
+    "</span>"
    ]
   },
   {
@@ -278,7 +294,7 @@
     "            connection.commit()\n",
     "\n",
     "    else:\n",
-    "        print(f'Fehler beim Abrufen der Webseite für Spieltag {matchday} und Torschüsse')"
+    "        print(f'Fehler beim Abrufen der Webseite für Spieltag {matchday} und Ballkontakte')"
    ]
   },
   {
@@ -286,18 +302,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Check ob conn_Ok = True\n",
-    "For-Schleife um die Daten jedes einzelnen Spieltages abzufragen (Total 35 Spieltage)\n",
-    "Mit hilfe der request-Methode die gesuchte Seite abfragen\n",
-    "Wenn der Status code erfolg meldet (200) wir mittels BeautifulSoup die Seite durchsucht (in diesem Fall nach Zweikampf-Daten). Die Suche erfolgt mittels class-Bezeichnung. Wird die Bezeichnung gefunden, wird das entsprechende <td> Tag ausgelesen und in einer Liste Abgespeichert.\n",
+    "#### Zweikampfdaten\n",
+    "<span style=\"font-family: Arial; font-size: 11pt;\">\n",
     "\n",
-    "Mit einer weiteren For-Schleife werden die einzelen Einträge der erzeugten Listen abgerufen, auf das Wesentliche gekürzt.\n",
+    "Der folgende Codeabschnitt durchläuft eine Schleife von 1 bis 35 (Spieltage) und ruft Daten von einer Webseite ab.\n",
     "\n",
-    "Vorbereitung der SQL Query in der Variable insert_data_query\n",
-    "\n",
-    "Abrufen der Funktion get_team_id um die ensprechende Team ID aus der DB zu lesen\n",
-    "\n",
-    "mittels cursor.execut() das ausführen der SQL Abfrage und mittels Connection.commit() das abspeichern in der DB"
+    "- Eine URL wird für jeden Spieltag generiert, um Daten von einer bestimmten Webseite abzurufen.\n",
+    "- Eine HTTP-Anfrage wird an die URL gesendet, um die Webseite abzurufen.\n",
+    "- Wenn die Antwort erfolgreich ist (200), werden relevante Informationen wie Mannschaftsnamen und Laufleistungen von der HTML-Seite extrahiert.\n",
+    "- Ein SQL-INSERT-Statement wird erstellt, um die Daten (Spieltag, Team-ID und Zweikampfdaten) in der Datenbank zu speichern.\n",
+    "- Die Änderungen werden in der Datenbank gespeichert.\n",
+    "- Bei auftretenden Fehlern wird die Transaktion rückgängig gemacht und eine entsprechende Fehlermeldung ausgegeben.\n",
+    "</span>"
    ]
   },
   {
@@ -341,18 +357,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Check ob conn_Ok = True\n",
-    "For-Schleife um die Daten jedes einzelnen Spieltages abzufragen (Total 35 Spieltage)\n",
-    "Mit hilfe der request-Methode die gesuchte Seite abfragen\n",
-    "Wenn der Status code erfolg meldet (200) wir mittels BeautifulSoup die Seite durchsucht (in diesem Fall nach Lauf-Daten). Die Suche erfolgt mittels class-Bezeichnung. Wird die Bezeichnung gefunden, wird das entsprechende <td> Tag ausgelesen und in einer Liste Abgespeichert.\n",
+    "#### Laufleistung\n",
+    "<span style=\"font-family: Arial; font-size: 11pt;\">\n",
     "\n",
-    "Mit einer weiteren For-Schleife werden die einzelen Einträge der erzeugten Listen abgerufen, auf das Wesentliche gekürzt.\n",
+    "Der folgende Codeabschnitt durchläuft eine Schleife von 1 bis 35 (Spieltage) und ruft Daten von einer Webseite ab.\n",
     "\n",
-    "Vorbereitung der SQL Query in der Variable insert_data_query\n",
-    "\n",
-    "Abrufen der Funktion get_team_id um die ensprechende Team ID aus der DB zu lesen\n",
-    "\n",
-    "mittels cursor.execut() das ausführen der SQL Abfrage und mittels Connection.commit() das abspeichern in der DB"
+    "- Eine URL wird für jeden Spieltag generiert, um Daten von einer bestimmten Webseite abzurufen.\n",
+    "- Eine HTTP-Anfrage wird an die URL gesendet, um die Webseite abzurufen.\n",
+    "- Wenn die Antwort erfolgreich ist (200), werden relevante Informationen wie Mannschaftsnamen und Schüsse aufs Tor von der HTML-Seite extrahiert.\n",
+    "- Ein SQL-INSERT-Statement wird erstellt, um die Daten (Spieltag, Team-ID und Laufleistung) in der Datenbank zu speichern.\n",
+    "- Die Änderungen werden in der Datenbank gespeichert.\n",
+    "- Bei auftretenden Fehlern wird die Transaktion rückgängig gemacht und eine entsprechende Fehlermeldung ausgegeben.\n",
+    "</span>"
    ]
   },
   {
@@ -964,18 +980,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Check ob conn_Ok = True\n",
-    "For-Schleife um die Daten jedes einzelnen Spieltages abzufragen (Total 35 Spieltage)\n",
-    "Mit hilfe der request-Methode die gesuchte Seite abfragen\n",
-    "Wenn der Status code erfolg meldet (200) wir mittels BeautifulSoup die Seite durchsucht (in diesem Fall nach Freistösse). Die Suche erfolgt mittels class-Bezeichnung. Wird die Bezeichnung gefunden, wird das entsprechende <td> Tag ausgelesen und in einer Liste Abgespeichert.\n",
+    "#### Freistösse\n",
+    "<span style=\"font-family: Arial; font-size: 11pt;\">\n",
     "\n",
-    "Mit einer weiteren For-Schleife werden die einzelen Einträge der erzeugten Listen abgerufen, auf das Wesentliche gekürzt.\n",
+    "Der folgende Codeabschnitt durchläuft eine Schleife von 1 bis 35 (Spieltage) und ruft Daten von einer Webseite ab.\n",
     "\n",
-    "Vorbereitung der SQL Query in der Variable insert_data_query\n",
-    "\n",
-    "Abrufen der Funktion get_team_id um die ensprechende Team ID aus der DB zu lesen\n",
-    "\n",
-    "mittels cursor.execut() das ausführen der SQL Abfrage und mittels Connection.commit() das abspeichern in der DB"
+    "- Eine URL wird für jeden Spieltag generiert, um Daten von einer bestimmten Webseite abzurufen.\n",
+    "- Eine HTTP-Anfrage wird an die URL gesendet, um die Webseite abzurufen.\n",
+    "- Wenn die Antwort erfolgreich ist (200), werden relevante Informationen wie Mannschaftsnamen und Schüsse aufs Tor von der HTML-Seite extrahiert.\n",
+    "- Ein SQL-INSERT-Statement wird erstellt, um die Daten (Spieltag, Team-ID und Freistösse) in der Datenbank zu speichern.\n",
+    "- Die Änderungen werden in der Datenbank gespeichert.\n",
+    "- Bei auftretenden Fehlern wird die Transaktion rückgängig gemacht und eine entsprechende Fehlermeldung ausgegeben.\n",
+    "</span>"
    ]
   },
   {
@@ -1009,7 +1025,7 @@
     "            connection.commit()\n",
     "\n",
     "    else:\n",
-    "        print(f'Fehler beim Abrufen der Webseite für Spieltag {matchday} und Laufleistung')"
+    "        print(f'Fehler beim Abrufen der Webseite für Spieltag {matchday} und Freistösse')"
    ]
   },
   {
@@ -1017,18 +1033,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Check ob conn_Ok = True\n",
-    "For-Schleife um die Daten jedes einzelnen Spieltages abzufragen (Total 35 Spieltage)\n",
-    "Mit hilfe der request-Methode die gesuchte Seite abfragen\n",
-    "Wenn der Status code erfolg meldet (200) wir mittels BeautifulSoup die Seite durchsucht (in diesem Fall nach Eckbällen). Die Suche erfolgt mittels class-Bezeichnung. Wird die Bezeichnung gefunden, wird das entsprechende <td> Tag ausgelesen und in einer Liste Abgespeichert.\n",
+    "#### Eckbälle\n",
+    "<span style=\"font-family: Arial; font-size: 11pt;\">\n",
     "\n",
-    "Mit einer weiteren For-Schleife werden die einzelen Einträge der erzeugten Listen abgerufen, auf das Wesentliche gekürzt.\n",
+    "Der folgende Codeabschnitt durchläuft eine Schleife von 1 bis 35 (Spieltage) und ruft Daten von einer Webseite ab.\n",
     "\n",
-    "Vorbereitung der SQL Query in der Variable insert_data_query\n",
-    "\n",
-    "Abrufen der Funktion get_team_id um die ensprechende Team ID aus der DB zu lesen\n",
-    "\n",
-    "mittels cursor.execut() das ausführen der SQL Abfrage und mittels Connection.commit() das abspeichern in der DB"
+    "- Eine URL wird für jeden Spieltag generiert, um Daten von einer bestimmten Webseite abzurufen.\n",
+    "- Eine HTTP-Anfrage wird an die URL gesendet, um die Webseite abzurufen.\n",
+    "- Wenn die Antwort erfolgreich ist (200), werden relevante Informationen wie Mannschaftsnamen und Schüsse aufs Tor von der HTML-Seite extrahiert.\n",
+    "- Ein SQL-INSERT-Statement wird erstellt, um die Daten (Spieltag, Team-ID und Eckbälle) in der Datenbank zu speichern.\n",
+    "- Die Änderungen werden in der Datenbank gespeichert.\n",
+    "- Bei auftretenden Fehlern wird die Transaktion rückgängig gemacht und eine entsprechende Fehlermeldung ausgegeben.\n",
+    "</span>"
    ]
   },
   {
@@ -1065,13 +1081,13 @@
     "            connection.commit()\n",
     "\n",
     "    else:\n",
-    "        print(f'Fehler beim Abrufen der Webseite für Spieltag {matchday} und Eckstösse')"
+    "        print(f'Fehler beim Abrufen der Webseite für Spieltag {matchday} und Eckbälle')"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "adsenv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1085,12 +1101,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9 | packaged by conda-forge | (main, Jan 11 2023, 15:15:40) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "cf1ba55af98fa155eb6f9507898a012b292e4dea61caf6d17930c9c692d43aca"
+    "hash": "c261aea317cc0286b3b3261fbba9abdec21eaa57589985bb7a274bf54d6cc0a7"
    }
   }
  },
