--- a/WebScraping/Get_Data_Bundesliga2.ipynb
+++ b/WebScraping/Get_Data_Bundesliga2.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Imports\n",
+    "<span style=\"font-family: Arial; font-size: 11pt;\">\n",
+    "Der folgende Code enthält die Imports, die für dieses Data Science-Projekt verwendet werden:\n",
+    "\n",
+    "- `requests`: Diese Bibliothek ermöglicht das Senden von HTTP-Anfragen an Webseiten und die Verarbeitung der erhaltenen Daten.\n",
+    "\n",
+    "- `BeautifulSoup` aus `bs4`: Diese Bibliothek wird verwendet, um HTML- oder XML-Dokumente zu parsen. Sie ermöglicht das Durchsuchen von Webseiten und das Extrahieren spezifischer Daten.\n",
+    "\n",
+    "- `psycopg2`: Diese Bibliothek dient als Schnittstelle zur PostgreSQL-Datenbank. Sie ermöglicht das Herstellen von Verbindungen zur Datenbank und das Ausführen von Abfragen sowie andere Datenbankoperationen.</span>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -13,6 +29,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Kontrollvariable\n",
+    "<span style=\"font-family: Arial; font-size: 11pt;\">\n",
+    "In diesem Codeabschnitt haben wir die Kontrollvariable `conn_Ok` mit dem anfänglichen Wert `True` implementiert, mit der anschliessend überprüft werden soll, ob die Verbindung zur DB steht</span>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -20,6 +46,20 @@
    "source": [
     "# Variablen\n",
     "conn_Ok = True\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### DB-Verbindung\n",
+    "<span style=\"font-family: Arial; font-size: 11pt;\">\n",
+    "Es wird mit einer Try-Except Methode versucht, eine Verbindung zur PostgreSQL-Datenbank herzustellen.\n",
+    "- Falls die Verbindung erfolgreich hergestellt werden kann, wird ein Cursor-Objekt erstellt und die Variable `conn_Ok` bleibt auf `True`.\n",
+    "\n",
+    "Falls ein Verbindungsfehler auftritt, wird eine Fehlermeldung ausgegeben und die Variable `conn_Ok` auf `False` gesetzt.\n",
+    "</span>"
    ]
   },
   {
@@ -46,6 +86,22 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Datenbereinigung\n",
+    "\n",
+    "<span style=\"font-family: Arial; font-size: 11pt;\">\n",
+    "Der folgende Code definiert die Funktion get_team_id, die die Team-ID anhand des Teamnamens aus der PostgreSQL-Datenbank abruft.\n",
+    "\n",
+    "- Der übergebene `team_name` wird auf spezifische Teamnamen überprüft und entsprechend angepasst, um den erwarteten Namen in der Datenbank zu verwenden.\n",
+    "- Es wird eine SQL-Abfrage ausgeführt, um die Team-ID aus der Datenbank abzurufen.\n",
+    "- Das Ergebnis der Abfrage wird überprüft und entweder die Team-ID zurückgegeben oder eine Fehlermeldung ausgegeben.\n",
+    "</span>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -69,6 +125,28 @@
     "        return result\n",
     "    else:\n",
     "        print(f'Keine Übereinstimmung für {team_name} gefunden')\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Ballkontakte\n",
+    "\n",
+    "<span style=\"font-family: Arial; font-size: 11pt;\">\n",
+    "\n",
+    "Der folgende Codeabschnitt durchläuft eine Schleife von 1 bis 35 (Spieltage) und ruft Daten von einer Webseite ab.\n",
+    "\n",
+    "- Eine URL wird für jeden Spieltag generiert, um Daten von einer bestimmten Webseite abzurufen.\n",
+    "- Eine HTTP-Anfrage wird an die URL gesendet, um die Webseite abzurufen.\n",
+    "- Wenn die Antwort erfolgreich ist (200), werden relevante Informationen wie Mannschaftsnamen und Ballkontakte von der HTML-Seite extrahiert.\n",
+    "- Die Team-ID wird mit Hilfe der `get_team_id()`-Funktion abgerufen.\n",
+    "- Ein SQL-INSERT-Statement wird erstellt, um die Daten (Spieltag, Team-ID und Ballkontakte) in der Datenbank zu speichern.\n",
+    "- Die Änderungen werden anschliessend in der Datenbank gespeichert.\n",
+    "- Bei auftretenden Fehlern wird die Transaktion rückgängig gemacht und eine entsprechende Fehlermeldung ausgegeben.\n",
+    "\n",
+    "</span>"
    ]
   },
   {
@@ -669,7 +747,27 @@
     "            connection.commit()\n",
     "\n",
     "    else:\n",
-    "        print(f'Fehler beim Abrufen der Webseite für Spieltag {matchday} und Torschüsse')"
+    "        print(f'Fehler beim Abrufen der Webseite für Spieltag {matchday} und Ballkontakte')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Laufleistung\n",
+    "\n",
+    "<span style=\"font-family: Arial; font-size: 11pt;\">\n",
+    "\n",
+    "Der folgende Codeabschnitt durchläuft eine Schleife von 1 bis 35 (Spieltage) und ruft Daten von einer Webseite ab.\n",
+    "\n",
+    "- Eine URL wird für jeden Spieltag generiert, um Daten von einer bestimmten Webseite abzurufen.\n",
+    "- Eine HTTP-Anfrage wird an die URL gesendet, um die Webseite abzurufen.\n",
+    "- Wenn die Antwort erfolgreich ist (200), werden relevante Informationen wie Mannschaftsnamen und Laufleistungen von der HTML-Seite extrahiert.\n",
+    "- Ein SQL-INSERT-Statement wird erstellt, um die Daten (Spieltag, Team-ID und Laufleistung) in der Datenbank zu speichern.\n",
+    "- Die Änderungen werden in der Datenbank gespeichert.\n",
+    "- Bei auftretenden Fehlern wird die Transaktion rückgängig gemacht und eine entsprechende Fehlermeldung ausgegeben.\n",
+    "</span>"
    ]
   },
   {
@@ -1837,6 +1935,25 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Freistösse\n",
+    "<span style=\"font-family: Arial; font-size: 11pt;\">\n",
+    "\n",
+    "Der folgende Codeabschnitt durchläuft eine Schleife von 1 bis 35 (Spieltage) und ruft Daten von einer Webseite ab.\n",
+    "\n",
+    "- Eine URL wird für jeden Spieltag generiert, um Daten von einer bestimmten Webseite abzurufen.\n",
+    "- Eine HTTP-Anfrage wird an die URL gesendet, um die Webseite abzurufen.\n",
+    "- Wenn die Antwort erfolgreich ist (200), werden relevante Informationen wie Mannschaftsnamen und Laufleistungen von der HTML-Seite extrahiert.\n",
+    "- Ein SQL-INSERT-Statement wird erstellt, um die Daten (Spieltag, Team-ID und Freistösse) in der Datenbank zu speichern.\n",
+    "- Die Änderungen werden in der Datenbank gespeichert.\n",
+    "- Bei auftretenden Fehlern wird die Transaktion rückgängig gemacht und eine entsprechende Fehlermeldung ausgegeben.\n",
+    "</span>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -2430,7 +2547,26 @@
     "            connection.commit()\n",
     "\n",
     "    else:\n",
-    "        print(f'Fehler beim Abrufen der Webseite für Spieltag {matchday} und Laufleistung')"
+    "        print(f'Fehler beim Abrufen der Webseite für Spieltag {matchday} und Freistösse')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Eckbälle\n",
+    "<span style=\"font-family: Arial; font-size: 11pt;\">\n",
+    "\n",
+    "Der folgende Codeabschnitt durchläuft eine Schleife von 1 bis 35 (Spieltage) und ruft Daten von einer Webseite ab.\n",
+    "\n",
+    "- Eine URL wird für jeden Spieltag generiert, um Daten von einer bestimmten Webseite abzurufen.\n",
+    "- Eine HTTP-Anfrage wird an die URL gesendet, um die Webseite abzurufen.\n",
+    "- Wenn die Antwort erfolgreich ist (200), werden relevante Informationen wie Mannschaftsnamen und Laufleistungen von der HTML-Seite extrahiert.\n",
+    "- Ein SQL-INSERT-Statement wird erstellt, um die Daten (Spieltag, Team-ID und Freistösse) in der Datenbank zu speichern.\n",
+    "- Die Änderungen werden in der Datenbank gespeichert.\n",
+    "- Bei auftretenden Fehlern wird die Transaktion rückgängig gemacht und eine entsprechende Fehlermeldung ausgegeben.\n",
+    "</span>"
    ]
   },
   {
@@ -2468,13 +2604,13 @@
     "            connection.commit()\n",
     "\n",
     "    else:\n",
-    "        print(f'Fehler beim Abrufen der Webseite für Spieltag {matchday} und Laufleistung')"
+    "        print(f'Fehler beim Abrufen der Webseite für Spieltag {matchday} und Eckbälle')"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "adsenv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2488,12 +2624,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "cf1ba55af98fa155eb6f9507898a012b292e4dea61caf6d17930c9c692d43aca"
+    "hash": "c261aea317cc0286b3b3261fbba9abdec21eaa57589985bb7a274bf54d6cc0a7"
    }
   }
  },
