--- a/WebScraping/Passquoten_Bundesliga1.ipynb
+++ b/WebScraping/Passquoten_Bundesliga1.ipynb
@@ -5,7 +5,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Imports"
+    "#### Imports\n",
+    "<span style=\"font-family: Arial; font-size: 11pt;\">\n",
+    "Der folgende Code enthält die Imports, die für dieses Data Science-Projekt verwendet werden:\n",
+    "\n",
+    "- `requests`: Diese Bibliothek ermöglicht das Senden von HTTP-Anfragen an Webseiten und die Verarbeitung der erhaltenen Daten.\n",
+    "\n",
+    "- `BeautifulSoup` aus `bs4`: Diese Bibliothek wird verwendet, um HTML- oder XML-Dokumente zu parsen. Sie ermöglicht das Durchsuchen von Webseiten und das Extrahieren spezifischer Daten.\n",
+    "\n",
+    "- `psycopg2`: Diese Bibliothek dient als Schnittstelle zur PostgreSQL-Datenbank. Sie ermöglicht das Herstellen von Verbindungen zur Datenbank und das Ausführen von Abfragen sowie andere Datenbankoperationen.</span>"
    ]
   },
   {
@@ -24,7 +32,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Connection (URL, DB) / Create Table / Import"
+    "##### Connection (URL, DB) / Create Table / Import\n",
+    "<span style=\"font-family: Arial; font-size: 11pt;\">\n",
+    "Der hier von uns geschriebene Code enthält zwei Funktionen, `connect_and_save_data` und `bundesliga_pass_stats`, die für das Verbinden mit unserer PostgreSQL-Datenbank, das Abrufen von Daten von einer Webseite und das Speichern dieser Daten in der Datenbank verantwortlich sind.\n",
+    "\n",
+    "Die Funktion `connect_and_save_data` verbindet sich mit der PostgreSQL-Datenbank und speichert die übergebenen Daten in der Tabelle `bundesliga_pass_stats`.\n",
+    "\n",
+    "Die Funktion `fetch_and_save_pass_stats` durchläuft eine Schleife von 1 bis 34 (Spieltage), ruft Daten von einer Webseite ab, extrahiert relevante Daten und speichert sie in der Datenbank.\n",
+    "\n",
+    "Der Code spezifisch für die Bundesliga-Passstatistiken von der Webseite \"www.sport.de\".\n",
+    "</span>\n"
    ]
   },
   {
@@ -62,17 +79,17 @@
     "            \n",
     "\n",
     "# Durchlaufe die Spieltage (md1 bis md34) und lade die Daten für jeden Spieltag\n",
-    "for matchday in range(1, 35):\n",
-    "    url = f'https://www.sport.de/fussball/deutschland-bundesliga/se45495/2022-2023/ro132754/spieltag/md{matchday}/teamstatistik-paesse/'\n",
+    "def fetch_and_save_pass_stats():\n",
+    "    for matchday in range(1, 35):\n",
+    "        url = f'https://www.sport.de/fussball/deutschland-bundesliga/se45495/2022-2023/ro132754/spieltag/md{matchday}/teamstatistik-paesse/'\n",
+    "        response = requests.get(url)\n",
     "\n",
-    "    response = requests.get(url)\n",
+    "        if response.status_code == 200:\n",
+    "            soup = BeautifulSoup(response.text, 'html.parser')\n",
     "\n",
-    "    if response.status_code == 200:\n",
-    "        soup = BeautifulSoup(response.text, 'html.parser')\n",
-    "\n",
-    "        # Suche nach allen Mannschaftsnamen und Passquoten\n",
-    "        team_elements = soup.find_all('td', class_='team-name team-name-list')\n",
-    "        pass_percentage_elements = soup.find_all('td', class_='team_stats-passes_complete_percentage team_stats-passes_complete_percentage-format')\n",
+    "            # Suche nach allen Mannschaftsnamen und Passquoten\n",
+    "            team_elements = soup.find_all('td', class_='team-name team-name-list')\n",
+    "            pass_percentage_elements = soup.find_all('td', class_='team_stats-passes_complete_percentage team_stats-passes_complete_percentage-format')\n",
     "\n",
     "        # Iteriere über die gefundenen Elemente und extrahiere die gewünschten Informationen\n",
     "        for team_element, pass_percentage_element in zip(team_elements, pass_percentage_elements):\n",
@@ -83,13 +100,15 @@
     "            connect_and_save_data(matchday, team_name, pass_percentage)\n",
     "\n",
     "    else:\n",
-    "        print(f'Fehler beim Abrufen der Webseite für Spieltag {matchday}')"
+    "        print(f'Fehler beim Abrufen der Webseite für Spieltag {matchday}')\n",
+    "\n",
+    "fetch_and_save_pass_stats()        "
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "adsenv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -103,12 +122,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9 | packaged by conda-forge | (main, Jan 11 2023, 15:15:40) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "cf1ba55af98fa155eb6f9507898a012b292e4dea61caf6d17930c9c692d43aca"
+    "hash": "c261aea317cc0286b3b3261fbba9abdec21eaa57589985bb7a274bf54d6cc0a7"
    }
   }
  },
