--- a/WebScraping/Get_Data_Bundesliga_22_23.ipynb
+++ b/WebScraping/Get_Data_Bundesliga_22_23.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "#### Imports\n",
     "<span style=\"font-family: Arial; font-size: 11pt;\">\n",
-    "Der folgende Code enthält die Imports, die für dieses Data Science-Projekt verwendet werden:\n",
+    "Der folgende Code enthält die Imports der aktuellen Saison (22/23), die für dieses Data Science-Projekt verwendet werden:\n",
     "\n",
     "- `requests`: Diese Bibliothek ermöglicht das Senden von HTTP-Anfragen an Webseiten und die Verarbeitung der erhaltenen Daten.\n",
     "\n",
