--- a/WebScraping/Get_Data_Bundesliga_21_22.ipynb
+++ b/WebScraping/Get_Data_Bundesliga_21_22.ipynb
@@ -121,27 +121,40 @@
     "        team_name = 'TSG 1899 Hoffenheim'\n",
     "    elif team_name == 'Bremen':\n",
     "        team_name = 'Werder Bremen'\n",
+    "    elif team_name == 'Bochum':\n",
+    "        team_name = ''\n",
+    "    elif team_name == 'Dortmund':\n",
+    "        team_name = ''                \n",
+    "    elif team_name == 'Bayern':\n",
+    "        team_name = ''\n",
+    "    elif team_name == 'Frankfurt':\n",
+    "        team_name = ''                \n",
+    "    elif team_name == 'Köln':\n",
+    "        team_name = ''\n",
+    "    elif team_name == 'Bielefeld':\n",
+    "        team_name = ''\n",
+    "    elif team_name == 'Union':\n",
+    "        team_name = ''                \n",
+    "    elif team_name == 'Mainz':\n",
+    "        team_name = ''\n",
+    "    elif team_name == 'Fürth':\n",
+    "        team_name = '' \n",
+    "    elif team_name == 'Hertha':\n",
+    "        team_name = ''\n",
+    "    elif team_name == 'Freiburg':\n",
+    "        team_name = ''\n",
+    "    elif team_name == 'Stuttgart':\n",
+    "        team_name = ''                \n",
+    "    elif team_name == 'Leverkusen':\n",
+    "        team_name = ''\n",
+    "    elif team_name == 'Leipzig':\n",
+    "        team_name = ''         \n",
+    "    elif team_name == 'Wolfsburg':\n",
+    "        team_name = ''\n",
+    "    elif team_name == 'Augsburg':\n",
+    "        team_name = ''                 \n",
     "\n",
-    "Gladbach\n",
-    "Dortmund\n",
-    "Bayern\n",
-    "Frankfurt\n",
-    "Köln\n",
-    "Bielefeld\n",
-    "Union\n",
-    "Mainz\n",
-    "Fürth\n",
-    "Hertha\n",
-    "Freiburg\n",
-    "Stuttgart\n",
-    "Leverkusen\n",
-    "Leipzig\n",
-    "Hoffenheim\n",
-    "Wolfsburg\n",
-    "Augsburg\n",
-    "Bochum\n",
-    "\n",
-    "Abgestiegen: Fürht und Bielefeld > ignorieren einbauen\n",
+    "#Abgestiegen: Fürht und Bielefeld > ignorieren einbauen nötig?\n",
     "   \n",
     "        \n",
     "    # Vergleicht Team Namen und sucht nach ID\n",
@@ -159,114 +172,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Passdaten\n",
-    "<span style=\"font-family: Arial; font-size: 11pt;\">\n",
-    "\n",
-    "Der folgende Codeabschnitt durchläuft eine Schleife von 1 bis 35 (Spieltage) und ruft Daten von einer Webseite ab.\n",
-    "\n",
-    "- Eine URL wird für jeden Spieltag generiert, um Daten von einer bestimmten Webseite abzurufen.\n",
-    "- Eine HTTP-Anfrage wird an die URL gesendet, um die Webseite abzurufen.\n",
-    "- Wenn die Antwort erfolgreich ist (200), werden relevante Informationen wie Mannschaftsnamen und Passquoten von der HTML-Seite extrahiert.\n",
-    "- Die Team-ID wird mit Hilfe der `get_team_id()`-Funktion abgerufen.\n",
-    "- Ein SQL-INSERT-Statement wird erstellt, um die Daten (Spieltag, Team-ID und Passdaten) in der Datenbank zu speichern.\n",
-    "- Die Änderungen werden anschliessend in der Datenbank gespeichert.\n",
-    "</span>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Torschüsse\n",
-    "<span style=\"font-family: Arial; font-size: 11pt;\">\n",
-    "\n",
-    "Der folgende Codeabschnitt durchläuft eine Schleife von 1 bis 35 (Spieltage) und ruft Daten von einer Webseite ab.\n",
-    "\n",
-    "- Eine URL wird für jeden Spieltag generiert, um Daten von einer bestimmten Webseite abzurufen.\n",
-    "- Eine HTTP-Anfrage wird an die URL gesendet, um die Webseite abzurufen.\n",
-    "- Wenn die Antwort erfolgreich ist (200), werden relevante Informationen wie Mannschaftsnamen und Schüsse aufs Tor von der HTML-Seite extrahiert.\n",
-    "- Ein SQL-INSERT-Statement wird erstellt, um die Daten (Spieltag, Team-ID und Torschüsse) in der Datenbank zu speichern.\n",
-    "- Die Änderungen werden in der Datenbank gespeichert.\n",
-    "- Bei auftretenden Fehlern wird die Transaktion rückgängig gemacht und eine entsprechende Fehlermeldung ausgegeben.\n",
-    "</span>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Ballkontakte\n",
-    "<span style=\"font-family: Arial; font-size: 11pt;\">\n",
-    "\n",
-    "Der folgende Codeabschnitt durchläuft eine Schleife von 1 bis 35 (Spieltage) und ruft Daten von einer Webseite ab.\n",
-    "\n",
-    "- Eine URL wird für jeden Spieltag generiert, um Daten von einer bestimmten Webseite abzurufen.\n",
-    "- Eine HTTP-Anfrage wird an die URL gesendet, um die Webseite abzurufen.\n",
-    "- Wenn die Antwort erfolgreich ist (200), werden relevante Informationen wie Mannschaftsnamen und Ballberührungen von der HTML-Seite extrahiert.\n",
-    "- Ein SQL-INSERT-Statement wird erstellt, um die Daten (Spieltag, Team-ID und Ballkontakte) in der Datenbank zu speichern.\n",
-    "- Die Änderungen werden in der Datenbank gespeichert.\n",
-    "- Bei auftretenden Fehlern wird die Transaktion rückgängig gemacht und eine entsprechende Fehlermeldung ausgegeben.\n",
-    "</span>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Zweikampfdaten\n",
-    "<span style=\"font-family: Arial; font-size: 11pt;\">\n",
-    "\n",
-    "Der folgende Codeabschnitt durchläuft eine Schleife von 1 bis 35 (Spieltage) und ruft Daten von einer Webseite ab.\n",
-    "\n",
-    "- Eine URL wird für jeden Spieltag generiert, um Daten von einer bestimmten Webseite abzurufen.\n",
-    "- Eine HTTP-Anfrage wird an die URL gesendet, um die Webseite abzurufen.\n",
-    "- Wenn die Antwort erfolgreich ist (200), werden relevante Informationen wie Mannschaftsnamen und Laufleistungen von der HTML-Seite extrahiert.\n",
-    "- Ein SQL-INSERT-Statement wird erstellt, um die Daten (Spieltag, Team-ID und Zweikampfdaten) in der Datenbank zu speichern.\n",
-    "- Die Änderungen werden in der Datenbank gespeichert.\n",
-    "- Bei auftretenden Fehlern wird die Transaktion rückgängig gemacht und eine entsprechende Fehlermeldung ausgegeben.\n",
-    "</span>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### Laufleistung\n",
     "<span style=\"font-family: Arial; font-size: 11pt;\">\n",
     "\n",
-    "Der folgende Codeabschnitt durchläuft eine Schleife von 1 bis 35 (Spieltage) und ruft Daten von einer Webseite ab.\n",
+    "Der folgende Codeabschnitt durchläuft eine Schleife von 1 bis 34 (Spieltage) und ruft Daten von einer Webseite ab.\n",
     "\n",
     "- Eine URL wird für jeden Spieltag generiert, um Daten von einer bestimmten Webseite abzurufen.\n",
     "- Eine HTTP-Anfrage wird an die URL gesendet, um die Webseite abzurufen.\n",
@@ -282,43 +191,47 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "#### Freistösse\n",
-    "<span style=\"font-family: Arial; font-size: 11pt;\">\n",
+    "for matchday in range(1, 34):\n",
+    "    url = f'https://www.kicker.de/bundesliga/laufleistung/2021-22/{matchday}'\n",
+    "    response = requests.get(url)\n",
     "\n",
-    "Der folgende Codeabschnitt durchläuft eine Schleife von 1 bis 35 (Spieltage) und ruft Daten von einer Webseite ab.\n",
+    "    if response.status_code == 200:\n",
+    "        soup = BeautifulSoup(response.text, 'html.parser')\n",
     "\n",
-    "- Eine URL wird für jeden Spieltag generiert, um Daten von einer bestimmten Webseite abzurufen.\n",
-    "- Eine HTTP-Anfrage wird an die URL gesendet, um die Webseite abzurufen.\n",
-    "- Wenn die Antwort erfolgreich ist (200), werden relevante Informationen wie Mannschaftsnamen und Schüsse aufs Tor von der HTML-Seite extrahiert.\n",
-    "- Ein SQL-INSERT-Statement wird erstellt, um die Daten (Spieltag, Team-ID und Freistösse) in der Datenbank zu speichern.\n",
-    "- Die Änderungen werden in der Datenbank gespeichert.\n",
-    "- Bei auftretenden Fehlern wird die Transaktion rückgängig gemacht und eine entsprechende Fehlermeldung ausgegeben.\n",
-    "</span>"
+    "        team_elements = soup.find_all('td', class_='kick__table--ranking__teamname kick__table__cell--multiline kick__t__a__l')\n",
+    "        distance_elements = soup.find_all('td', class_='kick__table--ranking__master')\n",
+    "        try:\n",
+    "            for team_element, distance_element in zip(team_elements, distance_elements):\n",
+    "                team_name = team_element.text.strip()\n",
+    "                distance_total = distance_element.text.strip()\n",
+    "\n",
+    "                insert_data_query = '''\n",
+    "                    INSERT INTO bundesliga_distance_stats (matchday, team_id, distance_total)\n",
+    "                    VALUES (%s, %s, %s);\n",
+    "                    '''\n",
+    "                team_id = get_team_id(team_name)\n",
+    "            \n",
+    "                cursor.execute(insert_data_query, (matchday, team_id, float(distance_total.replace(',', '.'))))\n",
+    "                            \n",
+    "                connection.commit()\n",
+    "        except Exception as e:\n",
+    "            connection.rollback\n",
+    "            print(f'Fehler beim Einfügen der Daten für Spieltag {matchday} und Laufleistung:', str(e))\n",
+    "\n",
+    "    else:\n",
+    "        print(f'Fehler beim Abrufen der Webseite für Spieltag {matchday} und Laufleistung')"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Eckbälle\n",
+    "#### Summierte Daten\n",
     "<span style=\"font-family: Arial; font-size: 11pt;\">\n",
     "\n",
-    "Der folgende Codeabschnitt durchläuft eine Schleife von 1 bis 35 (Spieltage) und ruft Daten von einer Webseite ab.\n",
+    "Aufgrund der einerseits eingeschränkten Verfügbarkeit aller Daten von vergangenen Saisons und der geringen Aussagekraft für die Folgesaison werden hier die Daten als Total von der vorherigen Saison importiert. Der folgende Codeabschnitt ruft die Daten von einer Webseite ab.\n",
     "\n",
     "- Eine URL wird für jeden Spieltag generiert, um Daten von einer bestimmten Webseite abzurufen.\n",
     "- Eine HTTP-Anfrage wird an die URL gesendet, um die Webseite abzurufen.\n",
@@ -334,7 +247,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "url = 'https://www.whoscored.com/Regions/81/Tournaments/3/Seasons/8667/Stages/19862/TeamStatistics/Germany-Bundesliga-2021-2022'\n",
+    "response = requests.get(url)\n",
+    "\n",
+    "if response.status_code == 200:\n",
+    "    soup = BeautifulSoup(response.text, 'html.parser')\n",
+    "\n",
+    "    team_elements = soup.find_all('td', class_='col12-lg-2 col12-m-3 col12-s-4 col12-xs-5 grid-abs overflow-text')\n",
+    "    goals_elements = soup.find_all('td', class_='goal')\n",
+    "    shots_elements = soup.find_all('td', class_='shotsPerGame')\n",
+    "    possession_elements = soup.find_all('td', class_='possession')\n",
+    "    pass_elements = soup.find_all('td', class_='passSuccess')\n",
+    "    try:\n",
+    "        for team_element, goals_element, shots_element, possession_element, pass_element in zip(team_elements, goals_elements, shots_elements, possession_elements, pass_elements):\n",
+    "            team_name = team_element.text.strip()\n",
+    "            goals_total = goals_element.text.strip()\n",
+    "            shots_total = shots_element.text.strip()\n",
+    "            touches_total = possession_element.text.strip()\n",
+    "            pass_percentage = pass_element.text.strip()\n",
+    "    except Exception as e:\n",
+    "        print(f\"An error occurred: {e}\")\n"
+   ]
   }
  ],
  "metadata": {
