--- a/WebScraping/Get_Data_Bundesliga_21_22.ipynb
+++ b/WebScraping/Get_Data_Bundesliga_21_22.ipynb
@@ -106,56 +106,60 @@
    "outputs": [],
    "source": [
     "def get_team_id(team_name):\n",
-    "\n",
+    "    #Alle Teamnamen von Kicker.de anpassen, damit diese mit den Teamnamen in unserer Tabelle übereinstimmen\n",
     "    if team_name == 'Gladbach':\n",
     "        team_name = 'Borussia Mönchengladbach'\n",
+    "    if team_name == '%Gladbach':\n",
+    "        team_name = 'Borussia Mönchengladbach'    \n",
     "    elif team_name == 'Hoffenheim':\n",
     "        team_name = 'TSG 1899 Hoffenheim'\n",
-    "    elif team_name == 'Bremen':\n",
+    "    elif team_name == '%Bremen':\n",
     "        team_name = 'Werder Bremen'\n",
-    "\n",
-    "    #Alle Teamnamen von Kicker.de anpassen auf Teamnamen in der Tabelle    \n",
-    "    elif team_name == 'Gladbach':\n",
-    "        team_name = 'Borussia Mönchengladbach'\n",
-    "    elif team_name == 'Hoffenheim':\n",
+    "    elif team_name == '%Hoffenheim':\n",
     "        team_name = 'TSG 1899 Hoffenheim'\n",
-    "    elif team_name == 'Bremen':\n",
+    "    elif team_name == '%Bremen':\n",
     "        team_name = 'Werder Bremen'\n",
-    "    elif team_name == 'Bochum':\n",
-    "        team_name = ''\n",
-    "    elif team_name == 'Dortmund':\n",
-    "        team_name = ''                \n",
-    "    elif team_name == 'Bayern':\n",
-    "        team_name = ''\n",
-    "    elif team_name == 'Frankfurt':\n",
-    "        team_name = ''                \n",
+    "    elif team_name == '%Bochum':\n",
+    "        team_name = 'VfL Bochum'\n",
+    "    elif team_name == '%Dortmund':\n",
+    "        team_name = 'Borussia Dortmund'                \n",
+    "    elif team_name == '%Bayern':\n",
+    "        team_name = 'FC Bayern München'\n",
+    "    elif team_name == '%Bayern Munich':\n",
+    "        team_name = 'FC Bayern München'        \n",
+    "    elif team_name == '%Frankfurt':\n",
+    "        team_name = 'Eintracht Frankfurt'                \n",
     "    elif team_name == 'Köln':\n",
-    "        team_name = ''\n",
-    "    elif team_name == 'Bielefeld':\n",
-    "        team_name = ''\n",
+    "        team_name = '1. FC Köln'\n",
+    "    elif team_name == '%Koln':\n",
+    "        team_name = '1. FC Köln'    \n",
     "    elif team_name == 'Union':\n",
-    "        team_name = ''                \n",
-    "    elif team_name == 'Mainz':\n",
-    "        team_name = ''\n",
-    "    elif team_name == 'Fürth':\n",
-    "        team_name = '' \n",
-    "    elif team_name == 'Hertha':\n",
-    "        team_name = ''\n",
-    "    elif team_name == 'Freiburg':\n",
-    "        team_name = ''\n",
-    "    elif team_name == 'Stuttgart':\n",
-    "        team_name = ''                \n",
+    "        team_name = '1. FC Union Berlin'                \n",
+    "    elif team_name == '%Mainz%': #Mainz 05\n",
+    "        team_name = '1. FSV Mainz 05'\n",
+    "    elif team_name == '%Hertha':\n",
+    "        team_name = 'Hertha BSC'\n",
+    "    elif team_name == '%Freiburg':\n",
+    "        team_name = 'SC Freiburg'\n",
+    "    elif team_name == '%Stuttgart':\n",
+    "        team_name = 'VfB Stuttgart'                \n",
     "    elif team_name == 'Leverkusen':\n",
-    "        team_name = ''\n",
+    "        team_name = 'Bayer Leverkusen'\n",
+    "    elif team_name == '%Leverkusen':\n",
+    "        team_name = 'Bayer Leverkusen'        \n",
     "    elif team_name == 'Leipzig':\n",
-    "        team_name = ''         \n",
-    "    elif team_name == 'Wolfsburg':\n",
-    "        team_name = ''\n",
-    "    elif team_name == 'Augsburg':\n",
-    "        team_name = ''                 \n",
+    "        team_name = 'RB Leipzig'         \n",
+    "    elif team_name == '%Wolfsburg':\n",
+    "        team_name = 'VfL Wolfsburg'\n",
+    "    elif team_name == '%Augsburg':\n",
+    "        team_name = 'FC Augsburg'              \n",
     "\n",
-    "#Abgestiegen: Fürht und Bielefeld > ignorieren einbauen nötig?\n",
+    "#Abgestiegen: Fürht und Bielefeld > ignorieren einbauen nötig? Fehlt nun einfach hier\n",
     "   \n",
+    "\n",
+    "\n",
+    "#Alle Teamnamen von whoscored.com anpassen, damit diese mit den Teamnamen in unserer Tabelle übereinstimmen\n",
+    "\n",
     "        \n",
     "    # Vergleicht Team Namen und sucht nach ID\n",
     "    cursor.execute(\"SELECT team_id FROM bundesliga_mannschaften WHERE mannschaft = %s\", (team_name,))\n",
