Webscraping Abschluss Entwurf

--- a/WebScraping/Get_Data_Bundesliga_21_22.ipynb
+++ b/WebScraping/Get_Data_Bundesliga_21_22.ipynb
@@ -106,7 +106,7 @@
    "outputs": [],
    "source": [
     "def get_team_id(team_name):\n",
-    "    #Alle Teamnamen von Kicker.de anpassen, damit diese mit den Teamnamen in unserer Tabelle übereinstimmen\n",
+    "    #Alle Teamnamen von kicker.de und whoscored.com anpassen, damit diese mit den Teamnamen in unserer Tabelle übereinstimmen\n",
     "    if team_name == 'Gladbach':\n",
     "        team_name = 'Borussia Mönchengladbach'\n",
     "    if team_name == '%Gladbach':\n",
@@ -155,12 +155,7 @@
     "        team_name = 'FC Augsburg'              \n",
     "\n",
     "#Abgestiegen: Fürht und Bielefeld > ignorieren einbauen nötig? Fehlt nun einfach hier\n",
-    "   \n",
-    "\n",
-    "\n",
-    "#Alle Teamnamen von whoscored.com anpassen, damit diese mit den Teamnamen in unserer Tabelle übereinstimmen\n",
-    "\n",
-    "        \n",
+    "           \n",
     "    # Vergleicht Team Namen und sucht nach ID\n",
     "    cursor.execute(\"SELECT team_id FROM bundesliga_mannschaften WHERE mannschaft = %s\", (team_name,))\n",
     "    result = cursor.fetchone()[0]\n",
@@ -168,7 +163,8 @@
     "    if result:\n",
     "        return result\n",
     "    else:\n",
-    "        print(f'Keine Übereinstimmung für {team_name} gefunden')\n"
+    "        print(f'Keine Übereinstimmung für {team_name} gefunden')\n",
+    "        return None\n"
    ]
   },
   {
@@ -232,12 +228,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Summierte Daten\n",
+    "#### Summierte Daten letzte Saison\n",
     "<span style=\"font-family: Arial; font-size: 11pt;\">\n",
     "\n",
     "Aufgrund der einerseits eingeschränkten Verfügbarkeit aller Daten von vergangenen Saisons und der geringen Aussagekraft für die Folgesaison werden hier die Daten als Total von der vorherigen Saison importiert. Der folgende Codeabschnitt ruft die Daten von einer Webseite ab.\n",
     "\n",
-    "- Eine URL wird für jeden Spieltag generiert, um Daten von einer bestimmten Webseite abzurufen.\n",
+    "- Eine URL der Quelle generiert, um die Daten von einer bestimmten Webseite abzurufen.\n",
     "- Eine HTTP-Anfrage wird an die URL gesendet, um die Webseite abzurufen.\n",
     "- Wenn die Antwort erfolgreich ist (200), werden relevante Informationen wie Mannschaftsnamen und Schüsse aufs Tor von der HTML-Seite extrahiert.\n",
     "- Ein SQL-INSERT-Statement wird erstellt, um die Daten (Spieltag, Team-ID und Eckbälle) in der Datenbank zu speichern.\n",
@@ -263,15 +259,19 @@
     "    shots_elements = soup.find_all('td', class_='shotsPerGame')\n",
     "    possession_elements = soup.find_all('td', class_='possession')\n",
     "    pass_elements = soup.find_all('td', class_='passSuccess')\n",
-    "    try:\n",
-    "        for team_element, goals_element, shots_element, possession_element, pass_element in zip(team_elements, goals_elements, shots_elements, possession_elements, pass_elements):\n",
-    "            team_name = team_element.text.strip()\n",
-    "            goals_total = goals_element.text.strip()\n",
-    "            shots_total = shots_element.text.strip()\n",
-    "            touches_total = possession_element.text.strip()\n",
-    "            pass_percentage = pass_element.text.strip()\n",
-    "    except Exception as e:\n",
-    "        print(f\"An error occurred: {e}\")\n"
+    "\n",
+    "    for team_element, goals_element, shots_element, possession_element, pass_element in zip(team_elements, goals_elements, shots_elements, possession_elements, pass_elements):\n",
+    "        team_name = team_element.text.strip()\n",
+    "        team_id = get_team_id(team_name)\n",
+    "        goals_total = int(goals_element.text.strip())\n",
+    "        shots_total = int(float(shots_element.text.strip()))\n",
+    "        touches_total = int(float(possession_element.text.strip()))\n",
+    "        pass_percentage = int(float(pass_element.text.strip()))\n",
+    "\n",
+    "        if team_id is not None:\n",
+    "            cursor = conn.cursor()\n",
+    "            cursor.execute(\"INSERT INTO last_season (team_id, goals, shots_total, touches_total, pass_percentage) VALUES (%s, %s, %s, %s, %s)\", (team_id, goals_total, shots_total, touches_total, pass_percentage))\n",
+    "        #    conn.commit()  ?\n"
    ]
   }
  ],
