--- a/WebScraping/Get_Data_Bundesliga_21_22.ipynb
+++ b/WebScraping/Get_Data_Bundesliga_21_22.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,9 +188,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fehler beim Einfügen der Daten für Spieltag 1 und Laufleistung: could not convert string to float: '13.02 km'\n",
+      "Fehler beim Einfügen der Daten für Spieltag 2 und Laufleistung: could not convert string to float: '25.68 km'\n",
+      "Fehler beim Einfügen der Daten für Spieltag 3 und Laufleistung: 'NoneType' object is not subscriptable\n",
+      "Fehler beim Einfügen der Daten für Spieltag 4 und Laufleistung: 'NoneType' object is not subscriptable\n",
+      "Fehler beim Einfügen der Daten für Spieltag 5 und Laufleistung: 'NoneType' object is not subscriptable\n",
+      "Fehler beim Einfügen der Daten für Spieltag 6 und Laufleistung: 'NoneType' object is not subscriptable\n",
+      "Fehler beim Einfügen der Daten für Spieltag 7 und Laufleistung: 'NoneType' object is not subscriptable\n",
+      "Fehler beim Einfügen der Daten für Spieltag 8 und Laufleistung: 'NoneType' object is not subscriptable\n",
+      "Fehler beim Einfügen der Daten für Spieltag 9 und Laufleistung: 'NoneType' object is not subscriptable\n",
+      "Fehler beim Einfügen der Daten für Spieltag 10 und Laufleistung: 'NoneType' object is not subscriptable\n",
+      "Fehler beim Einfügen der Daten für Spieltag 11 und Laufleistung: 'NoneType' object is not subscriptable\n",
+      "Fehler beim Einfügen der Daten für Spieltag 12 und Laufleistung: 'NoneType' object is not subscriptable\n",
+      "Fehler beim Einfügen der Daten für Spieltag 13 und Laufleistung: 'NoneType' object is not subscriptable\n",
+      "Fehler beim Einfügen der Daten für Spieltag 14 und Laufleistung: 'NoneType' object is not subscriptable\n",
+      "Fehler beim Einfügen der Daten für Spieltag 15 und Laufleistung: 'NoneType' object is not subscriptable\n",
+      "Fehler beim Einfügen der Daten für Spieltag 16 und Laufleistung: 'NoneType' object is not subscriptable\n",
+      "Fehler beim Einfügen der Daten für Spieltag 17 und Laufleistung: 'NoneType' object is not subscriptable\n",
+      "Fehler beim Einfügen der Daten für Spieltag 18 und Laufleistung: 'NoneType' object is not subscriptable\n",
+      "Fehler beim Einfügen der Daten für Spieltag 19 und Laufleistung: 'NoneType' object is not subscriptable\n",
+      "Fehler beim Einfügen der Daten für Spieltag 20 und Laufleistung: 'NoneType' object is not subscriptable\n",
+      "Fehler beim Einfügen der Daten für Spieltag 21 und Laufleistung: 'NoneType' object is not subscriptable\n",
+      "Fehler beim Einfügen der Daten für Spieltag 22 und Laufleistung: 'NoneType' object is not subscriptable\n",
+      "Fehler beim Einfügen der Daten für Spieltag 23 und Laufleistung: 'NoneType' object is not subscriptable\n",
+      "Fehler beim Einfügen der Daten für Spieltag 24 und Laufleistung: 'NoneType' object is not subscriptable\n",
+      "Fehler beim Einfügen der Daten für Spieltag 25 und Laufleistung: 'NoneType' object is not subscriptable\n",
+      "Fehler beim Einfügen der Daten für Spieltag 26 und Laufleistung: 'NoneType' object is not subscriptable\n",
+      "Fehler beim Einfügen der Daten für Spieltag 27 und Laufleistung: 'NoneType' object is not subscriptable\n",
+      "Fehler beim Einfügen der Daten für Spieltag 28 und Laufleistung: 'NoneType' object is not subscriptable\n",
+      "Fehler beim Einfügen der Daten für Spieltag 29 und Laufleistung: 'NoneType' object is not subscriptable\n",
+      "Fehler beim Einfügen der Daten für Spieltag 30 und Laufleistung: 'NoneType' object is not subscriptable\n",
+      "Fehler beim Einfügen der Daten für Spieltag 31 und Laufleistung: 'NoneType' object is not subscriptable\n",
+      "Fehler beim Einfügen der Daten für Spieltag 32 und Laufleistung: 'NoneType' object is not subscriptable\n",
+      "Fehler beim Einfügen der Daten für Spieltag 33 und Laufleistung: 'NoneType' object is not subscriptable\n"
+     ]
+    }
+   ],
    "source": [
     "for matchday in range(1, 34):\n",
     "    url = f'https://www.kicker.de/bundesliga/laufleistung/2021-22/{matchday}'\n",
@@ -207,7 +247,7 @@
     "                distance_total = distance_element.text.strip()\n",
     "\n",
     "                insert_data_query = '''\n",
-    "                    INSERT INTO bundesliga_distance_stats (matchday, team_id, distance_total)\n",
+    "                    INSERT INTO bundesliga_distance_stats_last_season (matchday, team_id, distance_total) ###### LAST SEASON #########\n",
     "                    VALUES (%s, %s, %s);\n",
     "                    '''\n",
     "                team_id = get_team_id(team_name)\n",
@@ -282,7 +322,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.0"
   },
   "orig_nbformat": 4,
